discussion/kv_engine/183250/183250_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54516: Modify a replica collection over DCP (in-memory only)

Commit enables DCP to produce a collection modify system event
over DCP - for in-memory streaming only. With this commit a
history change made to the active collection will generate an
event which DCP will transmit to clients that have opted-into
flatbuffers_system_events

There is no support for flushing a modify (so no backfill test)

Change-Id: I7ac0955c6242df63ee23c63c3d2ae34eec8a1d4d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-25 10:09:59.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-25 10:10:25.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/326399/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-25 10:53:14.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/565/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20: error: use of undeclared identifier "flatbufferSystemEventsEnabled"; did you mean "flatBuffersSystemEventsEnabled"? [clang-diagnostic-error]
            return flatbufferSystemEventsEnabled;
                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                   flatBuffersSystemEventsEnabled
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/active_stream.h:875:16: note: "flatBuffersSystemEventsEnabled" declared here
    const bool flatBuffersSystemEventsEnabled{false};
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:4246:16: error: no member named "producerFlatbufferSystemEventsEnabled" in "CollectionsDcpTestProducers"; did you mean "producerFlatBuffersSystemEventsEnabled"? [clang-diagnostic-error]
    producers->producerFlatbufferSystemEventsEnabled = false;
               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
               producerFlatBuffersSystemEventsEnabled
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/collections/collections_dcp_producers.h:90:10: note: "producerFlatBuffersSystemEventsEnabled" declared here
    bool producerFlatBuffersSystemEventsEnabled = true;
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/565/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: use of undeclared identifier "flatbufferSystemEventsEnabled"; did you mean "flatBuffersSystemEventsEnabled"? [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/565/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/545/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: use of undeclared identifier "flatbufferSystemEventsEnabled"; did you mean "flatBuffersSystemEventsEnabled"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/545/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/719/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/dcp/active_stream.cc(1345): error C2065: "flatbufferSystemEventsEnabled": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/719/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/557/ : FAILURE

Compile error at [2022-11-25T10:47:52.133Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: use of undeclared identifier "flatbufferSystemEventsEnabled"; did you mean "flatBuffersSystemEventsEnabled"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/557/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/584/ : FAILURE

Compile error at [2022-11-25T10:46:53.438Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: use of undeclared identifier "flatbufferSystemEventsEnabled"; did you mean "flatBuffersSystemEventsEnabled"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/584/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/583/ : FAILURE

Compile error at [2022-11-25T10:52:22.579Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: ?flatbufferSystemEventsEnabled? was not declared in this scope; did you mean ?flatBuffersSystemEventsEnabled??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/583/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/820/ : FAILURE

Compile error at [2022-11-25T10:32:28.620Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: use of undeclared identifier "flatbufferSystemEventsEnabled"; did you mean "flatBuffersSystemEventsEnabled"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/820/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/574/ : FAILURE

Compile error at [2022-11-25T10:51:28.895Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: use of undeclared identifier "flatbufferSystemEventsEnabled"; did you mean "flatBuffersSystemEventsEnabled"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/574/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/574/ : FAILURE

Compile error at [2022-11-25T10:52:00.771Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: ?flatbufferSystemEventsEnabled? was not declared in this scope; did you mean ?flatBuffersSystemEventsEnabled??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/574/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/563/ : FAILURE

Compile error at [2022-11-25T10:12:48.920Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: ?flatbufferSystemEventsEnabled? was not declared in this scope; did you mean ?flatBuffersSystemEventsEnabled??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/563/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21400/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
